BS-2546 - configure BOS-WEB for Sonar