@@ -35,18 +35,23 @@
 		<gwtVersion>${gwt.version}</gwtVersion>
 		<wro4j.version>1.7.0</wro4j.version>
 		<!-- Properties to enable jacoco code coverage analysis -->
-		<sonar.branch>MasterBugFixing</sonar.branch>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.skippedModules>bonita-home,console-war</sonar.skippedModules>
+		<!-- Report output directory, in Jenkins use: -Djacoco.outputDir=${WORKSPACE}-->
+		<jacoco.outputDir>${user.home}</jacoco.outputDir>
 		<!-- The destination file for the code coverage report has to be set to 
 			the same value in the parent pom and in each module pom. Then JaCoCo will 
 			add up information in the same report, so that, it will give the cross-module 
 			code coverage. -->
-		<!-- Tells SonarQube where the integration tests code coverage report is -->
-		<sonar.jacoco.itReportPath>${project.build.directory}/jacoco-reports/web-it.exec</sonar.jacoco.itReportPath>
-		<!-- Tells SonarQube where the unit tests code coverage report is -->
-		<!--sonar.surefire.reportsPath>${project.build.directory}/surefire-reports</sonar.surefire.reportsPath -->
+		<!-- Jacoco output file for UTs -->
+		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
+		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+		<!-- Jacoco output file for ITs -->
+		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+		<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
+		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
 
 	</properties>
 
@@ -477,29 +482,31 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>pre-integration-test</id>
+						<id>prepare-ut-agent</id>
+						<phase>process-test-classes</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${sonar.jacoco.reportPath}</destFile>
+							<propertyName>jacoco.agent.ut.arg</propertyName>
+							<append>true</append>
+						</configuration>
+					</execution>
+					<execution>
+						<id>prepare-it-agent</id>
 						<phase>pre-integration-test</phase>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 						<configuration>
-							<destFile>${sonar.jacoco.itReportPath}</destFile>
-							<propertyName>failsafe.argLine</propertyName>
-						</configuration>
-					</execution>
-					<execution>
-						<id>post-integration-test</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-						<configuration>
-							<dataFile>${sonar.jacoco.itReportPath}</dataFile>
+								<destFile>${sonar.jacoco.itReportPath}</destFile>
+								<propertyName>jacoco.agent.it.arg</propertyName>
+								<append>true</append>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<!-- after setting up jacoco we can run our tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -511,9 +518,12 @@
 							<goal>verify</goal>
 						</goals>
  						<configuration>
+ 							<argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
 							<systemPropertyVariables>
 								<bonita.home>${project.build.directory}/bonita/home</bonita.home>
 							</systemPropertyVariables>
+							<!-- workaround to have test report for IT in sonar, see http://stackoverflow.com/a/15567782/936729 -->
+							<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
 							<includes>
 								<!--run all possible tests
 								maven failsafe plugin filters classes by name
@@ -535,6 +545,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>${jacoco.agent.ut.arg}</argLine>
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
@@ -615,18 +626,18 @@
 							</excludes>
 						</configuration>
 					</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<executions>
-						<execution>
-							<phase>integration-test</phase>
-	 						<configuration>
-								<skipITs>true</skipITs>
-							</configuration> 
-						</execution>
-					</executions>
-				</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+		 						<configuration>
+									<skipITs>true</skipITs>
+								</configuration> 
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
